# wechat_notify

./: .gitignore  Cargo.toml  README.md
msg_listener/: Cargo.toml
msg_listener/src/: lib.rs
wechat_notify/: Cargo.toml
wechat_notify/src/: capture.rs  config.rs  dll.rs  main.rs  state.rs  ui.rs  watch.rs  window.rs
wechat_notify_common/: Cargo.toml
wechat_notify_common/src/: lib.rs
